--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ openchrom/plugins/net.openchrom.chromatogram.msd.converter.supplier.cdf.fragment
 openchrom/plugins/net.openchrom.chromatogram.msd.converter.supplier.cdf.fragment.test/bin/*
 openchrom/plugins/net.openchrom.chromatogram.msd.converter.supplier.cdf.ui/bin/*
 openchrom/plugins/net.openchrom.chromatogram.msd.converter.supplier.cdf/bin/*
+openchrom/plugins/net.openchrom.chromatogram.msd.converter.supplier.cdf.fragment.i18n/bin/*
+openchrom/plugins/net.openchrom.chromatogram.msd.converter.supplier.cdf.ui.fragment.i18n/bin/*
+openchrom/plugins/net.openchrom.chromatogram.msd.converter.supplier.cdf.ui.fragment.test/bin/*
