The gitignore file has been updated.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 openchrom/plugins/net.openchrom.chromatogram.msd.comparison.supplier.pbm.fragment.test/bin/*
 openchrom/plugins/net.openchrom.chromatogram.msd.comparison.supplier.pbm/bin/*
+openchrom/plugins/net.openchrom.chromatogram.msd.comparison.supplier.pbm.fragment.i18n/bin/*
