OpenChrom has been switched to Eclipse 3.7.0 (Indigo).

--- a/openchrom/pom.xml
+++ b/openchrom/pom.xml
@@ -87,6 +87,11 @@
      <url>http://download.eclipse.org/eclipse/updates/3.5</url>
    </repository>
    <repository>
+     <id>indigo</id>
+     <layout>p2</layout>
+     <url>http://download.eclipse.org/releases/indigo</url>
+   </repository>
+   <repository>
      <id>helios</id>
      <layout>p2</layout>
      <url>http://download.eclipse.org/releases/helios</url>
