The comparison functionality has been completely revised.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 openchrom/plugins/net.openchrom.chromatogram.msd.comparison.supplier.pbm.fragment.test/bin/*
 openchrom/plugins/net.openchrom.chromatogram.msd.comparison.supplier.pbm/bin/*
 openchrom/plugins/net.openchrom.chromatogram.msd.comparison.supplier.pbm.fragment.i18n/bin/*
+openchrom/plugins/net.openchrom.chromatogram.msd.comparison.supplier.pbm.fragment.test/*.log*
