--- a/openchrom/plugins/net.openchrom.chromatogram.msd.converter.supplier.pdf/plugin.xml
+++ b/openchrom/plugins/net.openchrom.chromatogram.msd.converter.supplier.pdf/plugin.xml
@@ -4,12 +4,12 @@
    <extension
          point="net.openchrom.chromatogram.msd.converter.chromatogramSupplier">
       <ChromatogramSupplier
-            description="Exports Chromatograms to PDF."
-            exportConverter="net.openchrom.chromatogram.msd.converter.supplier.pdf.converter.PDFChromatogramExportConverter"
+            description="Exports Chromatograms to PDF format."
+            exportConverter="net.openchrom.chromatogram.msd.converter.supplier.pdf.converter.ChromatogramExportConverter"
             fileExtension=".pdf"
             filterName="PDF Chromatogram (*.pdf)"
             id="net.openchrom.chromatogram.msd.converter.supplier.pdf"
-            importConverter="net.openchrom.chromatogram.msd.converter.supplier.pdf.converter.PDFChromatogramImportConverter"
+            importConverter="net.openchrom.chromatogram.msd.converter.supplier.pdf.converter.ChromatogramImportConverter"
             isExportable="true"
             isImportable="false">
       </ChromatogramSupplier>
