--- a/openchrom/plugins/net.openchrom.chromatogram.msd.comparison.supplier.pbm.ui.fragment.test/.project
+++ b/openchrom/plugins/net.openchrom.chromatogram.msd.comparison.supplier.pbm.ui.fragment.test/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>net.openchrom.chromatogram.msd.comparison.supplier.pbm.fragment.i18n</name>
+	<name>net.openchrom.chromatogram.msd.comparison.supplier.pbm.ui.fragment.test</name>
 	<comment></comment>
 	<projects>
 	</projects>
