--- a/openchrom/features/net.openchrom.chromatogram.msd.comparison.supplier.pbm.feature/pom.xml
+++ b/openchrom/features/net.openchrom.chromatogram.msd.comparison.supplier.pbm.feature/pom.xml
@@ -4,12 +4,12 @@
 
   <parent>
     <groupId>net.openchrom</groupId>
-    <artifactId>net.openchrom.plugins.parent</artifactId>
+    <artifactId>net.openchrom.features.parent</artifactId>
     <version>BUILD-VERSION</version>
   </parent>
 
-  <artifactId>net.openchrom.chromatogram.msd.comparison.supplier.pbm.fragment.i18n</artifactId>
-  <packaging>eclipse-plugin</packaging>
+  <artifactId>net.openchrom.chromatogram.msd.comparison.supplier.pbm.feature</artifactId>
+  <packaging>eclipse-feature</packaging>
   <version>0.8.0-SNAPSHOT</version>
   
 </project>
