--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
 openchrom/plugins/net.openchrom.chromatogram.msd.converter.supplier.pdf.ui/bin/
-openchrom/plugins/net.openchrom.chromatogram.msd.converter.supplier.pdf.ui.fragment.i18n/bin/
 openchrom/plugins/net.openchrom.chromatogram.msd.converter.supplier.pdf.ui.fragment.test/bin/
 openchrom/plugins/net.openchrom.chromatogram.msd.converter.supplier.pdf/bin/
-openchrom/plugins/net.openchrom.chromatogram.msd.converter.supplier.pdf.fragment.i18n/bin/
 openchrom/plugins/net.openchrom.chromatogram.msd.converter.supplier.pdf.fragment.test/bin/
-openchrom/updateSites/net.openchrom.chromatogram.msd.converter.supplier.pdf.updateSite/artifacts.jar
-openchrom/updateSites/net.openchrom.chromatogram.msd.converter.supplier.pdf.updateSite/content.jar
-openchrom/updateSites/net.openchrom.chromatogram.msd.converter.supplier.pdf.updateSite/features/
-openchrom/updateSites/net.openchrom.chromatogram.msd.converter.supplier.pdf.updateSite/plugins/
+openchrom/sites/net.openchrom.chromatogram.msd.converter.supplier.pdf.updateSite/artifacts.jar
+openchrom/sites/net.openchrom.chromatogram.msd.converter.supplier.pdf.updateSite/content.jar
+openchrom/sites/net.openchrom.chromatogram.msd.converter.supplier.pdf.updateSite/features/
+openchrom/sites/net.openchrom.chromatogram.msd.converter.supplier.pdf.updateSite/plugins/
