--- a/openchrom/plugins/net.openchrom.chromatogram.msd.converter.supplier.pdf/build.properties
+++ b/openchrom/plugins/net.openchrom.chromatogram.msd.converter.supplier.pdf/build.properties
@@ -4,4 +4,5 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                icons/,\
-               License.txt
+               License.txt,\
+               OSGI-INF/
