--- a/openchrom/sites/net.openchrom.chromatogram.msd.converter.supplier.pdf.updateSite/pom.xml
+++ b/openchrom/sites/net.openchrom.chromatogram.msd.converter.supplier.pdf.updateSite/pom.xml
@@ -4,12 +4,11 @@
 
   <parent>
     <groupId>net.openchrom</groupId>
-    <artifactId>net.openchrom.plugins.parent</artifactId>
+    <artifactId>net.openchrom.sites.parent</artifactId>
     <version>BUILD-VERSION</version>
   </parent>
-
-  <artifactId>net.openchrom.chromatogram.msd.converter.supplier.pdf.ui.fragment.i18n</artifactId>
-  <packaging>eclipse-plugin</packaging>
+  <artifactId>net.openchrom.chromatogram.msd.converter.supplier.pdf.updateSite</artifactId>
+  <packaging>eclipse-update-site</packaging>
   <version>0.8.0-SNAPSHOT</version>
   
 </project>
