--- a/openchrom/cbi/net.openchrom.chromatogram.msd.converter.supplier.pdf.cbi/pom.xml
+++ b/openchrom/cbi/net.openchrom.chromatogram.msd.converter.supplier.pdf.cbi/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  Copyright (c) 2012 Philip (eselmeister) Wenig.
+  Copyright (c) 2012, 2013 Philip (eselmeister) Wenig.
 -->
 
 <project
