--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ openchrom/sites/net.openchrom.chromatogram.msd.converter.supplier.cdf.updateSite
 openchrom/sites/net.openchrom.chromatogram.msd.converter.supplier.cdf.updateSite/content.jar
 openchrom/sites/net.openchrom.chromatogram.msd.converter.supplier.cdf.updateSite/features/
 openchrom/sites/net.openchrom.chromatogram.msd.converter.supplier.cdf.updateSite/plugins/
+openchrom/features/net.openchrom.chromatogram.msd.converter.supplier.cdf.feature/target/
+openchrom/plugins/net.openchrom.chromatogram.msd.converter.supplier.cdf.ui/target/
+openchrom/plugins/net.openchrom.chromatogram.msd.converter.supplier.cdf/target/
+openchrom/sites/net.openchrom.chromatogram.msd.converter.supplier.cdf.updateSite/target/
