--- a/openchrom/plugins/pom.xml
+++ b/openchrom/plugins/pom.xml
@@ -6,6 +6,7 @@
     <groupId>net.openchrom</groupId>
     <artifactId>parent</artifactId>
     <version>BUILD-VERSION</version>
+    <relativePath>../cbi/net.openchrom.chromatogram.msd.converter.supplier.cdf.cbi/pom.xml</relativePath>
   </parent>
 
   <artifactId>net.openchrom.plugins.parent</artifactId>
