--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,4 @@ openchrom/plugins/net.openchrom.supplier.cdk/target/
 openchrom/sites/net.openchrom.supplier.cdk.updateSite/target/
 openchrom/plugins/net.openchrom.supplier.cdk.fragment.test/Openchrom.log
 openchrom/plugins/net.openchrom.supplier.cdk.fragment.test/Openchrom*.log*
-
+openchrom/plugins/net.openchrom.supplier.cdk.fragment.test/testData/files/export/*.png
