The fragment wasn't included in the build. It has been fixed.

--- a/openchrom/plugins/net.openchrom.supplier.cdk.ui/build.properties
+++ b/openchrom/plugins/net.openchrom.supplier.cdk.ui/build.properties
@@ -3,4 +3,7 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
-               plugin.xml
+               plugin.xml,\
+               fragment.e4xmi,\
+               html/,\
+               toc_plugin.xml
