--- a/openchrom/plugins/pom.xml
+++ b/openchrom/plugins/pom.xml
@@ -6,7 +6,7 @@
     <groupId>net.openchrom</groupId>
     <artifactId>parent</artifactId>
     <version>BUILD-VERSION</version>
-    <relativePath>../cbi/net.openchrom.chromatogram.msd.comparison.supplier.pbm.cbi/pom.xml</relativePath>
+    <relativePath>../cbi/net.chemclipse.chromatogram.msd.comparison.supplier.pbm.cbi/pom.xml</relativePath>
   </parent>
 
   <artifactId>net.openchrom.plugins.parent</artifactId>
