OpenChrom has been prepared for the ChemClipse/OpenChrom simultaneous release. The open source plug-ins have been renamed to chemclipse.

--- a/openchrom/plugins/net.openchrom.chromatogram.msd.converter.supplier.pdf.ui/plugin.xml
+++ b/openchrom/plugins/net.openchrom.chromatogram.msd.converter.supplier.pdf.ui/plugin.xml
@@ -4,7 +4,7 @@
    <extension
          point="org.eclipse.ui.preferencePages">
       <page
-            category="net.openchrom.chromatogram.msd.converter.ui.converterPreferencePage"
+            category="net.chemclipse.chromatogram.msd.converter.ui.converterPreferencePage"
             class="net.openchrom.chromatogram.msd.converter.supplier.pdf.ui.preferences.ConverterPreferencePage"
             id="net.openchrom.chromatogram.msd.converter.supplier.pdf.ui.preferences.converterPreferencePage"
             name="PDF Chromatogram MS Converter">
